# sfml-state-machine

./: CMakeLists.txt  README.md
src/: main.cpp
src/Core/: Application.cpp  Application.hpp  ResourcePath.mm  Resources.cpp  Resources.hpp
src/State/: IntroState.cpp  IntroState.hpp  OptionsState.cpp  OptionsState.hpp  PlayState.cpp  PlayState.hpp
src/State/Base/: State.cpp  State.hpp  StateMachine.cpp  StateMachine.hpp
